<resources>
    <string name="app_name">Run4Fun</string>
    <string name="statistical_analyze_text">Statistical Analyze</string>
    <string name="settings_text">Settings</string>
    <string name="workout_history_text">Workouts History</string>
    <string name="start_workout_text">Start Workout!</string>
    <string name="save_text">Save</string>
    <string name="age_text">Age</string>
    <string name="height_text">Height</string>
    <string name="weight_text">Weight</string>
    <string name="user_text">User</string>
    <string name="ok_text">OK</string>
    <string name="cancel_text">cancel</string>
    <string name="please_enter_text">Please enter </string>
    <string name="work_out_history">Workouts History</string>
    <string name="date_text">Date: </string>
    <string name="distance_text">Distance:</string>
    <string name="time_text">Time: </string>
    <string name="velocity_text">Velocity: </string>
    <string name="stop_text">Stop </string>
    <string name="pause_text">Pause </string>
    <string name="resume_text">Resume </string>
    <string name="finish_text">Finish </string>
    <string name="yes_text">Yes </string>
    <string name="no_text">No </string>
    <string name="alert_text">Alert </string>
    <string name="save_db_success_text">save workout in db was successfully! </string>
    <string name="save_db_failed_text">save workout in db was failed! </string>
    <string name="alert_before_finish_text">Are you sure you want to finish and save the workout?</string>
    <string name="calories_text">Calories: </string>
    <string name="workouts_text">Workouts</string>
    <string name="pai_chart_title_text">Distance Graph</string>
    <string name="bar_chart_title_text">Calories Graph</string>
    <string name="month_text">Month</string>
    <string name="google_map_key">AIzaSyAkrr5osbGCAKg5TXAxUGcWDaOWxvXh9Kk</string>
    <string name="coordinates_text">Coordinates:</string>
    <string name="discard_text">Discard</string>
    <string name="summary_text">Summary</string>
    <string name="alert_before_discard_text">are you sure you want to discard? (the workout will delete)</string>
    <string name="workout_data_text">WorkOut Data</string>
    <string name="avg_pace_text">Avg. Pace:</string>
    <string name="gender_text">Gender</string>
    <string name="bmr_text">BMR</string>
    <string name="male_text">Male</string>
    <string name="female_text">Female</string>
    <string name="other_text">Other</string>
    <string name="calories_graph_text">Calories Graph</string>
    <string name="distance_graph_text">Distance Graph</string>
    <string name="alert_before_stop_text">Are you sure you want to stop the the workout?</string>
    <string name="gps_network_not_enabled">the network is not enable</string>
    <string name="open_location_settings">open location settings</string>
    <string name="alarm_text">dont forget to training today!!!</string>
    <string name="service_name">LocationService</string>
    <string name="service_status_monitor">running...</string>
    <string name="hello_user_text">Hello, User</string>
</resources>