<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:padding="10sp"
            app:srcCompat="@drawable/run4funicon" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10sp">

            <TextView
                android:id="@+id/hello_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:gravity="center"
                android:textSize="25sp"
                android:text="@string/hello_user_text"
                android:textStyle="bold" />

            <Button
                android:id="@+id/statistical_analyze_button"
                android:layout_width="match_parent"
                android:layout_height="80sp"
                android:autoText="true"
                android:text="@string/statistical_analyze_text"
                android:textSize="20sp"
                app:icon="@android:drawable/ic_menu_sort_by_size"
                app:iconGravity="textStart" />

            <Button
                android:id="@+id/settings_button"
                android:layout_width="match_parent"
                android:layout_height="80sp"
                android:text="@string/settings_text"
                android:textSize="20sp"
                app:icon="@android:drawable/ic_menu_preferences"
                app:iconGravity="textStart" />

            <Button
                android:id="@+id/acitivity_history_button"
                android:layout_width="match_parent"
                android:layout_height="80sp"
                android:text="@string/workout_history_text"
                android:textSize="20sp"
                app:icon="@android:drawable/ic_menu_agenda"
                app:iconGravity="textStart" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:orientation="vertical">

                <Button
                    android:id="@+id/start_activity_button"
                    android:layout_width="match_parent"
                    android:layout_height="100sp"
                    android:background="@drawable/button"
                    android:backgroundTint="#F50707"
                    android:text="@string/start_workout_text"
                    android:textSize="25sp"
                    app:icon="@android:drawable/ic_menu_send"
                    app:iconGravity="textStart"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="541dp" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>