<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.WorkOutFinishActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10sp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/summary_text"
            android:textSize="25sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/date_key_edit_finish_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/date_text"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/date_value_edit_finish_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/distance_key_edit_finish_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/distance_text"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/distatnce_value_edit_finish_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/time_key_edit_finish_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/time_text"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/time_value_edit_finish_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView"
                android:textSize="20sp" />
        </LinearLayout>

        <com.google.android.gms.maps.MapView
            android:id="@+id/mapViewWorkOut"
            android:layout_width="match_parent"
            android:layout_height="368dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_gravity="bottom"
                android:layout_marginRight="3sp"
                android:layout_weight="1"
                android:text="@string/save_text"
                android:textSize="25sp"
                android:textStyle="bold"
                app:icon="@android:drawable/ic_menu_save"
                app:iconGravity="textStart" />

            <Button
                android:id="@+id/discard_button"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:text="@string/discard_text"
                android:textSize="25sp"
                app:icon="@android:drawable/ic_menu_delete"
                app:iconGravity="textStart" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>