<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.StatisticalAnalysisActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/statatistical_analyze_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/statistical_analyze_text"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/bar_chart_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/distance_graph_text"
            android:textSize="17sp" />

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/barChart"
            android:layout_width="match_parent"
            android:layout_height="320dp">

        </com.github.mikephil.charting.charts.BarChart>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/pie_chart_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/calories_graph_text"
                android:textSize="17sp" />

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/pieChart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"></com.github.mikephil.charting.charts.PieChart>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>