<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.WorkOutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10sp">

        <TextView
            android:id="@+id/timer_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:backgroundTint="#4EA8B3F9"
            android:gravity="center"
            android:text="00:00"
            android:textSize="80sp" />

        <GridLayout
            android:id="@+id/gridLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:columnCount="1"
            android:gravity="center"
            android:rowCount="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5sp"
                android:background="@drawable/button"
                android:backgroundTint="#23000000"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/distance_key_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="25sp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/distance_text"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/distance_value_textview"
                    android:layout_width="match_parent"
                    android:layout_height="60sp"
                    android:gravity="center"
                    android:text="0 KM"
                    android:textSize="40sp"
                    android:textStyle="normal" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5sp"
                android:layout_marginRight="15sp"
                android:background="@drawable/button"
                android:backgroundTint="#23000000"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/cal_key_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="25sp"
                    android:layout_gravity="center"
                    android:text="@string/calories_text"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/cal_value_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="60sp"
                    android:text="0"
                    android:textSize="40sp"
                    android:textStyle="normal" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5sp"
                android:layout_marginRight="15sp"
                android:background="@drawable/button"
                android:backgroundTint="#23000000"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/pace_key_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="25sp"
                    android:layout_gravity="center"
                    android:text="@string/avg_pace_text"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/pace_value_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="60sp"
                    android:text="0:00"
                    android:textSize="40sp"
                    android:textStyle="normal" />

            </LinearLayout>

        </GridLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="vertical"
            android:padding="10sp">

            <Button
                android:id="@+id/pause_button"
                android:layout_width="match_parent"
                android:layout_height="80sp"
                android:onClick="onClickPause"
                android:text="@string/pause_text"
                android:textSize="25sp"
                android:visibility="visible"
                app:icon="@android:drawable/ic_media_pause"
                app:iconGravity="textStart" />

            <Button
                android:id="@+id/resume_button"
                android:layout_width="match_parent"
                android:layout_height="80sp"
                android:onClick="onClickResume"
                android:text="@string/resume_text"
                android:textSize="25sp"
                app:icon="@android:drawable/ic_media_play"
                app:iconGravity="textStart" />

            <Button
                android:id="@+id/stop_button"
                android:layout_width="match_parent"
                android:layout_height="80sp"
                android:onClick="onClickStop"
                android:text="@string/stop_text"
                android:textSize="25sp"
                android:textStyle="bold"
                app:icon="@android:drawable/editbox_dropdown_light_frame"
                app:iconGravity="textStart" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>